[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/artwork/Export/background_pattern.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menu/Background_Image.gd" type="Script" id=2]
[ext_resource path="res://assets/artwork/Export/background.png" type="Texture" id=3]
[ext_resource path="res://assets/artwork/Export/Game/Back_Btn.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Sen/Sen-ExtraBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Game/BackBtn.gd" type="Script" id=6]
[ext_resource path="res://assets/Theme/default_theme.tres" type="Theme" id=7]
[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70

[sub_resource type="DynamicFont" id=2]
size = 290
font_data = ExtResource( 5 )

[node name="Game" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1123.0
margin_top = -540.0
margin_right = 1123.0
margin_bottom = 540.0
theme = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_sizable" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1143.0
margin_top = -560.0
margin_right = -1103.0
margin_bottom = -520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Image" type="TextureRect" parent="Background_sizable"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1120.0
margin_top = -540.0
margin_right = 1126.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_pattern" type="TextureRect" parent="Background_sizable"]
margin_left = -940.0
margin_top = -388.0
margin_right = 3286.0
margin_bottom = 1685.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NonMirrored" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Category" type="Label" parent="NonMirrored"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 156.0
margin_right = 1656.0
margin_bottom = 964.0
text = "Things that happen in Vegas"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinAlphabet" type="Button" parent="NonMirrored"]
margin_left = 1784.0
margin_top = 392.0
margin_right = 2168.0
margin_bottom = 776.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.988235, 0.541176, 0.0588235, 1 )
custom_colors/font_color_hover = Color( 0.988235, 0.541176, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.541176, 0.0588235, 1 )
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mirrored" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category" type="Label" parent="Mirrored"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 620.0
margin_right = 1656.0
margin_bottom = 1004.0
text = "Things that happen in Vegas"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinAlphabet" type="Button" parent="Mirrored"]
margin_left = 1784.0
margin_top = 640.0
margin_right = 2168.0
margin_bottom = 1024.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.988235, 0.541176, 0.0588235, 1 )
custom_colors/font_color_hover = Color( 0.988235, 0.541176, 0.0588235, 1 )
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinAlphabet2" type="Button" parent="Mirrored"]
margin_left = 1784.0
margin_top = 640.0
margin_right = 2168.0
margin_bottom = 1024.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.988235, 0.541176, 0.0588235, 1 )
custom_colors/font_color_hover = Color( 0.988235, 0.541176, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.541176, 0.0588235, 1 )
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CategoryMirrored" type="Label" parent="Mirrored"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1696.0
margin_top = 428.0
margin_right = 3312.0
margin_bottom = 809.0
rect_rotation = 180.0
text = "Things that happen in Vegas"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinAlphabetMirrored" type="Button" parent="Mirrored"]
margin_left = 2168.0
margin_top = 448.0
margin_right = 2552.0
margin_bottom = 832.0
rect_rotation = 180.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.988235, 0.541176, 0.0588235, 1 )
custom_colors/font_color_hover = Color( 0.988235, 0.541176, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.988235, 0.541176, 0.0588235, 1 )
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="ColorRect" parent="Mirrored"]
margin_left = 379.0
margin_top = 544.0
margin_right = 1867.0
margin_bottom = 551.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="TextureButton" parent="."]
margin_left = 80.0
margin_top = 72.0
margin_right = 159.0
margin_bottom = 160.0
texture_normal = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextCategory" type="Button" parent="."]
margin_left = 224.0
margin_right = 1696.0
margin_bottom = 1064.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NonMirrored/SpinAlphabet" to="." method="_on_SpinAlphabet_pressed"]
[connection signal="pressed" from="Mirrored/SpinAlphabet" to="." method="_on_SpinAlphabet_pressed"]
[connection signal="pressed" from="Mirrored/SpinAlphabet2" to="." method="_on_SpinAlphabet_pressed"]
[connection signal="pressed" from="Mirrored/SpinAlphabetMirrored" to="." method="_on_SpinAlphabet_pressed"]
[connection signal="pressed" from="BackBtn" to="BackBtn" method="_on_BackBtn_pressed"]
[connection signal="pressed" from="NextCategory" to="." method="_on_NextCategory_pressed"]
